# python-project-50

./: .codeclimate.yml  .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  gediff.cast  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: lint.yml  workflow.yml
gendiff/formatters/: format.py  json.py  plain.py  stylish.py
gendiff/modules/: generate_diff.py  parser.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .codeclimate.yml  test_generate_diff.py
tests/tests_data/: file21.json
